--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="apple-mobile-web-app-status-bar" content="#aa7700">
+    <meta name="theme-color" content="black">
+    <link rel="manifest" href="manifest.json">
+
     <title>Keyboard Layout Translator</title>
     <style>
         body {
@@ -22,10 +28,31 @@
             cursor: pointer;
         }
     </style>
+    <script>
+        window.addEventListener('load', () => {
+            registerSW();
+        });
+
+        // Register the Service Worker
+        async function registerSW() {
+            if ('serviceWorker' in navigator) {
+                try {
+                    await navigator
+                        .serviceWorker
+                        .register('serviceworker.js');
+                }
+                catch (e) {
+                    console.log('SW registration failed');
+                }
+            }
+        }
+    </script>
 </head>
+
 <body>
     <h1>Выберите перевод раскладки</h1>
     <button onclick="location.href='/rustoeng'">Русская раскладка в английскую</button>
     <button onclick="location.href='/engtorus'">Английская раскладка в русскую</button>
 </body>
+
 </html>
