--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 </head>
 
 <body>
-    <h1>Выберите перевод раскладки</h1>
+    <h1>What Do U Want</h1>
     <button onclick="location.href='/rustoeng'">Русская раскладка в английскую</button>
-    <button onclick="location.href='/engtorus'">Английская раскладка в русскую</button>
+    <button onclick="location.href='/currency-converter'">Перевод Валют Туда Сюда</button>
 </body>
 
 </html>
