--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
 <body>
     <h1>What Do U Want</h1>
+    <h1>Commit {{ site.github.build_revision }} </h1>
+    
     <button onclick="location.href='/rustoeng'">Русская раскладка в английскую</button>
     <button onclick="location.href='/currency-converter'">Перевод Валют Туда Сюда</button>
 </body>
