--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     
     <button onclick="location.href='/rustoeng'">Русская раскладка в английскую</button>
     <button onclick="location.href='/currency-converter'">Перевод Валют Туда Сюда</button>
+    <button onclick="location.href='/science-tools'">Супер Научные Няшки Шняжки</button>
 </body>
 
 </html>
