--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="ru">
-  <head>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>wishlist-lite</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <script type="module" src="./src/main.tsx"></script>
+</body>
+
 </html>
