--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>wishlist-lite</title>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
