--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
     .page {
       max-width: 960px;
       margin: 0 auto;
-      padding: 56px 20px 64px;
+      padding: 24px 18px 48px;
       display: flex;
       flex-direction: column;
-      gap: 36px;
+      gap: 28px;
     }
     header.hero {
       position: relative;
-      padding-right: 60px;
+      padding-right: 56px;
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 8px;
     }
     .brand {
       display: inline-flex;
@@ -67,7 +67,7 @@
       display: inline-block;
     }
     h1 {
-      margin: 10px 0 8px;
+      margin: 6px 0 6px;
       font-size: clamp(28px, 4vw, 38px);
       letter-spacing: -0.03em;
     }
@@ -149,9 +149,8 @@
     }
     .add-btn:hover { transform: translateY(-1px); border-color: var(--accent); }
     @media (max-width: 640px) {
-      .page { padding: 48px 18px 56px; }
-      header.hero { padding-right: 0; padding-top: 4px; }
-      .theme-toggle { position: fixed; top: 16px; right: 16px; z-index: 2; }
+      .page { padding: 24px 14px 44px; gap: 24px; }
+      header.hero { padding-right: 56px; }
       .grid { gap: 10px; }
     }
   </style>
