--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       color-scheme: light;
     }
     :root[data-theme="dark"] {
-      --bg: #0c1020;
-      --surface: #111827;
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --border: #1f2937;
-      --accent: #e5e7eb;
+      --bg: #111315;
+      --surface: #1a1c20;
+      --text: #e7e9ed;
+      --muted: #a6abb4;
+      --border: #2a2d33;
+      --accent: #d3d6dc;
       color-scheme: dark;
     }
     * { box-sizing: border-box; }
@@ -95,36 +95,52 @@
     .theme-toggle:hover { transform: translateY(-1px); border-color: var(--accent); }
     .theme-toggle:focus-visible { outline: 2px solid var(--accent); outline-offset: 2px; }
     .theme-icon { font-size: 18px; line-height: 1; }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 12px;
-    }
-    .card {
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 12px;
-      text-decoration: none;
-      color: inherit;
-      background: var(--surface);
+    .list {
+      margin: 0;
+      padding: 0;
+      list-style: none;
       display: flex;
       flex-direction: column;
-      gap: 6px;
-      transition: border-color 0.15s ease, transform 0.15s ease, background-color 0.15s ease;
+      gap: 10px;
     }
-    .card:hover { border-color: var(--accent); transform: translateY(-1px); }
-    .card:active { transform: translateY(0); }
-    .meta { font-size: 12px; text-transform: uppercase; letter-spacing: 0.08em; color: var(--muted); }
-    .card h2 { margin: 0; font-size: 17px; letter-spacing: -0.01em; }
-    .card p { margin: 0; color: var(--muted); font-size: 14px; line-height: 1.45; }
+    .item {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+      padding: 10px 0;
+      border-bottom: 1px solid var(--border);
+    }
+    .item:first-child { border-top: 1px solid var(--border); }
+    .item a {
+      color: var(--text);
+      text-decoration: none;
+      display: inline-flex;
+      align-items: baseline;
+      gap: 8px;
+      font-weight: 700;
+      letter-spacing: -0.01em;
+      font-size: 17px;
+    }
+    .label {
+      font-size: 11px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      color: var(--muted);
+    }
     .pill {
       display: inline-block;
-      padding: 2px 8px;
+      padding: 1px 8px;
       border: 1px solid var(--border);
       border-radius: 999px;
       font-size: 11px;
-      margin-left: 6px;
       color: var(--muted);
+      margin-left: 4px;
+    }
+    .desc {
+      margin: 0;
+      color: var(--muted);
+      font-size: 14px;
+      line-height: 1.5;
     }
     footer {
       display: flex;
@@ -168,27 +184,38 @@
       </button>
     </header>
 
-    <main class="grid" aria-label="Сервисы">
-      <a class="card" href="./currency-converter.html">
-        <span class="meta">Финансы</span>
-        <h2>Конвертер валют</h2>
-        <p>Быстрый пересчёт основных валют с кешированием курсов и сохранением ввода.</p>
-      </a>
-      <a class="card" href="./rustoeng.html">
-        <span class="meta">Раскладка</span>
-        <h2>Латиница -> Кириллица</h2>
-        <p>Исправляет текст, набранный в неверной раскладке. Вводите латиницей — получаете кириллицу.</p>
-      </a>
-      <a class="card" href="#" aria-disabled="true">
-        <span class="meta">Research<span class="pill">Скоро</span></span>
-        <h2>Science tool</h2>
-        <p>Заготовка под научные утилиты. Замените ссылку, как только инструмент будет готов.</p>
-      </a>
-      <a class="card" href="./wishlist.html">
-        <span class="meta">Supabase</span>
-        <h2>Wish list</h2>
-        <p>Авторизованный список желаний: вход через Google, аватарка и сохранённые позиции.</p>
-      </a>
+    <main aria-label="Сервисы">
+      <ul class="list">
+        <li class="item">
+          <a href="./currency-converter.html">
+            <span class="label">Финансы</span>
+            <span>Конвертер валют</span>
+          </a>
+          <p class="desc">Пересчёт основных валют с кешированием курсов и сохранением ввода.</p>
+        </li>
+        <li class="item">
+          <a href="./rustoeng.html">
+            <span class="label">Раскладка</span>
+            <span>Латиница -> Кириллица</span>
+          </a>
+          <p class="desc">Исправляет текст, набранный в неверной раскладке.</p>
+        </li>
+        <li class="item">
+          <a href="#" aria-disabled="true">
+            <span class="label">Research</span>
+            <span>Science tool</span>
+            <span class="pill">Скоро</span>
+          </a>
+          <p class="desc">Заготовка под научные утилиты. Замените ссылку, как только инструмент будет готов.</p>
+        </li>
+        <li class="item">
+          <a href="./wishlist.html">
+            <span class="label">Supabase</span>
+            <span>Wish list</span>
+          </a>
+          <p class="desc">Авторизованный список желаний: вход через Google, аватарка и сохранённые позиции.</p>
+        </li>
+      </ul>
     </main>
 
     <footer>
