docs: add cyrillic to latin layout link

--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
           <p class="desc">Исправляет текст, набранный в неверной раскладке.</p>
         </li>
         <li class="item">
+          <a href="./rustoeng.html">
+            <span class="label">Раскладка</span>
+            <span>Кириллица -> Латиница</span>
+          </a>
+          <p class="desc">Переносит кириллицу в латиницу, если набрали текст русской раскладкой.</p>
+        </li>
+        <li class="item">
           <a href="#" aria-disabled="true">
             <span class="label">Research</span>
             <span>Science tool</span>
@@ -218,10 +225,10 @@
       </ul>
     </main>
 
-    <footer>
+    <!-- <footer>
       <span>Карточки легко расширяются: скопируйте блок и подставьте ссылку.</span>
       <a class="add-btn" href="mailto:hello@mdcod.dev?subject=Новый%20инструмент&body=Опишите%20ссылку%20и%20кратко%20назначение">+ Добавить идею</a>
-    </footer>
+    </footer> -->
   </div>
 
   <script>
