--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
       display: flex;
       flex-direction: column;
       gap: 6px;
-      margin-top: 4px;
+      margin-top: 10px;
+      padding-top: 6px;
     }
     .group-title {
       margin: 0;
@@ -114,16 +115,14 @@
       list-style: none;
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 12px;
     }
     .item {
       display: flex;
       flex-direction: column;
       gap: 2px;
-      padding: 10px 0;
-      border-bottom: 1px solid var(--border);
+      padding: 4px 0 6px;
     }
-    .item:first-child { border-top: 1px solid var(--border); }
     .item a {
       color: var(--text);
       text-decoration: none;
