--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
     <header class="hero">
       <div>
         <div class="brand"><span class="brand-dot"></span>mdcod tools</div>
-        <h1>Лаконичный набор утилит</h1>
-        <p class="lede">Минималистичный список быстрых инструментов: конвертер валют, исправление раскладки, будущий science tool и Supabase-базовый wish list.</p>
+        <!-- <h1>Лаконичный набор утилит</h1>
+        <p class="lede">Минималистичный список быстрых инструментов: конвертер валют, исправление раскладки, будущий science tool и Supabase-базовый wish list.</p> -->
       </div>
       <button class="theme-toggle" type="button" aria-label="Сменить тему" title="Сменить тему">
         <span class="theme-icon" aria-hidden="true">☀</span>
@@ -191,6 +191,17 @@
     </header>
 
     <main aria-label="Сервисы">
+      <div class="group">
+        <p class="group-title">Supabase</p>
+        <ul class="list">
+          <li class="item">
+            <a href="./wishlist.html">
+              <span>Wish list</span>
+            </a>
+            <p class="desc">Авторизованный список желаний: вход через Google, аватарка и сохранённые позиции.</p>
+          </li>
+        </ul>
+      </div>
       <div class="group">
         <p class="group-title">Финансы</p>
         <ul class="list">
@@ -234,17 +245,6 @@
         </ul>
       </div>
 
-      <div class="group">
-        <p class="group-title">Supabase</p>
-        <ul class="list">
-          <li class="item">
-            <a href="./wishlist.html">
-              <span>Wish list</span>
-            </a>
-            <p class="desc">Авторизованный список желаний: вход через Google, аватарка и сохранённые позиции.</p>
-          </li>
-        </ul>
-      </div>
     </main>
 
     <!-- <footer>
