--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       display: flex;
       flex-direction: column;
       gap: 2px;
-      padding: 4px 0 6px;
+      padding: 4px 0 6px 15px;
     }
     .item a {
       color: var(--text);
@@ -131,7 +131,7 @@
       gap: 6px;
       font-weight: 700;
       letter-spacing: -0.01em;
-      font-size: 17px;
+      font-size: 15px;
     }
     .pill {
       display: inline-block;
